k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mms
  labels:
    name: mms
    app: mms-decomposor
